just fixed some spacing

--- a/scss/style/blocks/bouncy-spinner.scss
+++ b/scss/style/blocks/bouncy-spinner.scss
@@ -1,6 +1,6 @@
 @import '../variables';
 
-﻿.bouncy-spinner {
+.bouncy-spinner {
   display: none;
 }
 
